# stapler

./: .gitignore  Bakefile  README.md  pyproject.toml  requirements.txt
example_site/: stapler.toml
example_site/site/: about.html  index.html
example_site/site/assets/styles/: custom.css
example_site/site/blog/: getting-started.md  welcome-to-stapler.md
example_site/site/templates/: base.html  blog_index.html  blog_post.html
stapler/: cli.py  config.py  server.py
stapler/core/: engine.py  utils.py
stapler/plugins/: blog.py  sitemap.py
