[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stapler-ssg"
version = "0.1.0"
description = "simple static site generator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Unlicense"}
authors = [
    {name = "Gijs6", email = "me@gijs6.nl"},
]

dependencies = [
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "colorama>=0.4.6",
    "feedgen>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
stapler = "stapler.cli:main"

[project.urls]
Homepage = "https://github.com/gijs6/stapler"
Repository = "https://github.com/gijs6/stapler"

[tool.hatch.build.targets.wheel]
packages = ["stapler"]

[tool.ruff]
line-length = 320
target-version = "py311"
